I added a transition for switching to dark mode
i added transition: background 0.3s linear,color 0.3s linear; so when i switch to dark mode , there will be a transition

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -1,6 +1,7 @@
 [data-theme="dark"] {
   background-color: #111 !important;
   color: #eee;
+  transition: background 0.3s linear,color 0.3s linear;
 }
 
 [data-theme="dark"] .bg-light {
